--- a/src/app/_compartido/cabecera/cabecera.component.html
+++ b/src/app/_compartido/cabecera/cabecera.component.html
@@ -1,3 +1,8 @@
-<p>
-  cabecera works!
-</p>
+<div class="contenedor">
+  <div class="titulo">
+    NEOLOGIO
+  </div>
+  <div class="subtitulo">
+    La factoria de neologismos en castellano
+  </div>
+</div>
