--- a/src/app/_compartido/minilista/minilista.component.html
+++ b/src/app/_compartido/minilista/minilista.component.html
@@ -5,5 +5,5 @@
                       [enlace]="fila.enlace"
                       [titulo]="fila.titulo">
   </app-fila-minilista>
-  <app-pie-minilista></app-pie-minilista>
+  <app-pie-minilista [enlace]="enlace"></app-pie-minilista>
 </div>
