--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Abel|IM+Fell+Great+Primer:400,400i');
+
+a {
+  text-decoration: none;
+  color: black;
+}
