--- a/src/app/_compartido/minilista/fila-minilista/fila-minilista.component.sass
+++ b/src/app/_compartido/minilista/fila-minilista/fila-minilista.component.sass
@@ -1,13 +1,20 @@
 .fila
   border-bottom: 1px solid lightgrey
   padding: 1em
-  font-family: 'IM Fell Great Primer', serif
-  cursor: pointer
-  display: flex
+  font-family: 'Abel', sans-serif
   justify-content: space-between
-
+  display: flex
+  height: 1em
+  position: relative
   &:hover
     background-color: #dddddd
   .enlace
     text-decoration: none
     color: black
+    .contenido
+      position: absolute
+      text-overflow: ellipsis
+      overflow: hidden
+      white-space: nowrap
+      width: 70%
+    .autor
