--- a/src/app/_compartido/minilista/pie-minilista/pie-minilista.component.sass
+++ b/src/app/_compartido/minilista/pie-minilista/pie-minilista.component.sass
@@ -1,7 +1,7 @@
 .pie
   padding: 1em
   text-align: center
-  font-family: 'IM Fell Great Primer', serif
+  font-family: 'Abel', sans-serif
   cursor: pointer
   &:hover
     background-color: #dddddd
