--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,10 +1,9 @@
 <div class="contenedor">
   <app-cabecera-inicio></app-cabecera-inicio>
-  <hr>
   <app-neologismo-destacado></app-neologismo-destacado>
-  <hr>
   <div class="minilistas">
     <app-peticiones-recientes></app-peticiones-recientes>
     <app-propuestas-recientes></app-propuestas-recientes>
   </div>
+  <app-pie></app-pie>
 </div>
