--- a/src/app/inicio/neologismo-destacado/neologismo-destacado.component.sass
+++ b/src/app/inicio/neologismo-destacado/neologismo-destacado.component.sass
@@ -3,3 +3,6 @@
   justify-content: center
   align-items: center
   flex-direction: column
+  border: 1px solid lightgrey
+  margin: 1em
+  padding: 1em
