Usando CSS Grid

--- a/src/app/_compartido/cabecera/cabecera.component.html
+++ b/src/app/_compartido/cabecera/cabecera.component.html
@@ -1,8 +1,16 @@
-<div class="contenedor">
-  <div class="titulo">
-    NEOLOGIO
+<div class="container" >
+  <div class="row">
+    <div class="twelve columns">
+      <div class="titulo" routerLink="/inicio">
+        NEOLOGIO
+      </div>
+    </div>
   </div>
-  <div class="subtitulo">
-    La factoria de neologismos en castellano
+  <div class="row">
+    <div class="twelve columns">
+      <div class="subtitulo">
+        La factoria de neologismos en castellano
+      </div>
+    </div>
   </div>
 </div>
