--- a/src/app/_compartido/cabecera/cabecera.component.sass
+++ b/src/app/_compartido/cabecera/cabecera.component.sass
@@ -1,10 +1,12 @@
-.contenedor
+.container
   display: flex
   justify-content: center
   align-items: center
   flex-direction: column
+  margin-bottom: 1em
   .titulo
     font-family: 'IM Fell Great Primer', serif
     font-size: 5rem
+    cursor: pointer
   .subtitulo
     font-family: 'Abel', sans-serif
