--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,9 +1,22 @@
-<div class="contenedor">
-  <app-cabecera-inicio></app-cabecera-inicio>
+<div class="cuadrícula">
+
+  <div class="cabecera">CABECERA</div>
+  <div class="neologismo-destacado">NEOLOGISMO DESTACADO</div>
+  <div class="peticiones-recientes">PETICIONES</div>
+  <div class="propuestas-recientes">PROPUESTAS</div>
+
+
+
+  <!--
+  <app-cabecera></app-cabecera>
   <app-neologismo-destacado></app-neologismo-destacado>
-  <div class="minilistas">
-    <app-peticiones-recientes></app-peticiones-recientes>
-    <app-propuestas-recientes></app-propuestas-recientes>
-  </div>
-  <app-pie></app-pie>
+  <div class="row">
+    <div class="six columns">
+      <app-peticiones-recientes></app-peticiones-recientes>
+    </div>
+    <div class="six columns">
+      <app-propuestas-recientes></app-propuestas-recientes>
+    </div>
+  </div>-->
 </div>
+<app-pie></app-pie>
