--- a/src/app/inicio/neologismo-destacado/neologismo-destacado.component.html
+++ b/src/app/inicio/neologismo-destacado/neologismo-destacado.component.html
@@ -1,4 +1,10 @@
 <div class="contenedor">
-  <div class="titulo">Neologismo destacado</div>
-  <app-neologismo [neologismo]="neologismo"></app-neologismo>
+  <div class="row">
+    <div class="twelve columns titulo">Neologismo destacado</div>
+  </div>
+  <div class="row">
+    <div class="twelve columns">
+      <app-neologismo [neologismo]="neologismo"></app-neologismo>
+    </div>
+  </div>
 </div>
